config/logging/_ytt_lib/cf-k8s-logging/500-fluentd-daemonset.yaml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: #@ data.values.system_namespace
  labels:
    app: fluentd
spec:
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: #@ data.values.fluentd.prometheus.path
        prometheus.io/port: #@ data.values.fluentd.prometheus.port
    spec:
      serviceAccountName: fluentd-service-account
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: fluentd
        image: #@ data.values.images.fluent
        ports:
        - containerPort: 24224
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 200Mi
        volumeMounts:
        - name: fluentd-config
          mountPath: /fluentd/etc
        - name: varlog
          mountPath: /var/log
        - name: varvcapstore
          mountPath: /var/vcap/store
        - name: dockercontainers
          mountPath: /var/lib/docker/containers
      terminationGracePeriodSeconds: 30
      volumes:
      - name: fluentd-config
        configMap:
          name: fluentd-config
      - name: varlog
        hostPath:
          path: /var/log
      - name: varvcapstore
        hostPath:
          path: /var/vcap/store
      - name: dockercontainers
        hostPath:
          path: /var/lib/docker/containers
