config/logging/_ytt_lib/cf-k8s-logging/500-log-cache-deployment.yaml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-cache
  namespace: #@ data.values.system_namespace
  labels:
    app: log-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-cache
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "6060"
        prometheus.io/path: "/metrics"
      labels:
        app: log-cache
    spec:
      containers:
      - name: cf-auth-proxy
        image: #@ data.values.images.cf_auth_proxy
        ports:
          - containerPort: 8083
      - name: syslog-server
        image: #@ data.values.images.syslog_server
        ports:
        - containerPort: 8082
      - name: log-cache
        image: #@ data.values.images.log_cache
      - name: gateway
        image: #@ data.values.images.log_cache_gateway
        ports:
        - containerPort: 8081
