config/logging/_ytt_lib/cf-k8s-logging/log-cache-api-deployment.yaml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-cache-frontend
  namespace: #@ data.values.system_namespace
  labels:
    app: log-cache-api
spec:
  progressDeadlineSeconds: 1200
  replicas: 1
  selector:
    matchLabels:
      app: log-cache-api
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "6065"
        prometheus.io/path: "/metrics"
      labels:
        app: log-cache-api
    spec:
      containers:
      - name: cf-auth-proxy
        image: #@ data.values.images.cf_auth_proxy
        ports:
          - containerPort: 8083
        readinessProbe:
          httpGet:
            path: /api/v1/info
            port: 8083
          failureThreshold: 1
          periodSeconds: 10
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 15m
            memory: 100Mi
      - name: gateway
        image: #@ data.values.images.log_cache_gateway
        ports:
        - containerPort: 8081
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 15m
            memory: 100Mi
