config/logging/_ytt_lib/cf-k8s-logging/log-cache-api-service.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Service
metadata:
  name: log-cache-api
  namespace: #@ data.values.system_namespace
spec:
  selector:
    app: log-cache-api
  ports:
  - protocol: TCP
    port: 8083
    name: http
